Fixes for IE7 (alignment of checkboxes due to double-margin bug on floated elements. The popular display:inline hack doesn't fix this. Removed the margin for now, was collapsed/invisible in most browsers anyway. Covered by the margins on the parent elements.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@87041 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/jquery.articleFeedback/jquery.articleFeedback.css
+++ b/modules/jquery.articleFeedback/jquery.articleFeedback.css
@@ -316,11 +316,11 @@
 .articleFeedback-expertise-options input {
 	display: block;
 	clear: both;
-	margin: 0.5em 0 0.5em 2em;
+	margin-left: 2em;
 }
 
 .articleFeedback-expertise-options label {
-	line-height: 1.6em;
+ 	line-height: 1.6em;
 }
 
 .articleFeedback-expertise-options .articleFeedback-helpimprove-email {
